--- a/index.html
+++ b/index.html
@@ -1,20 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> B-10-A2-Solution</title>
-    <link rel="stylesheet" href="styles/style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>B-10-A2-Solution</title>
+    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+    <link rel="stylesheet" href="styles/style.css" />
+  </head>
+  <body class="inter-font">
     <header>
-
+      <nav class="navbar display-flex">
+        <h1 class="gym-title">GlobeFit Gym</h1>
+        <ul class="display-flex">
+          <li><a href="" class="button btn-primary">Home</a></li>
+          <li><a href="">Service</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">About</a></li>
+        </ul>
+      </nav>
+      <div class="banner display-flex">
+        <div class="banner-text">
+          <h1 class="club-title">
+            Get body in <br><span class="miama-font">shape</span> & stay healthy
+          </h1>
+          <p class="club-description">
+            A huge selection of health and fitness content, healthy recipes and
+            transformation stories to help you get fit and stay fit!
+          </p>
+          <div class="btn-secondary">
+            <button class="btn-primary join-button">Join Club Now!</button>
+          <button class="download-button">Download App</button>
+          </div>
+          
+        </div>
+        <div class="banner-imag">
+          <img src="./images/Images 2.png" alt="" />
+          <div class="card-1">
+            <h1 class="card-1-title">500+</h1>
+            <p class="card-1-description">Free Workout Videos</p>
+          </div>
+          <div class="card-2 display-flex">
+            <div class="circle"></div>
+            <div>
+                <h1 class="card-2-title">350+</h1>
+            <p class="card-2-description">Video tutorial</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </header>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-</body>
+    <main></main>
+    <footer></footer>
+  </body>
 </html>
