complete design without footer and meet out team

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>B-10-A2-Solution</title>
-    <link rel= "stylesheet" href= "https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css" >
+    <link
+      rel="stylesheet"
+      href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css"
+    />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body class="inter-font">
@@ -21,7 +24,8 @@
       <div class="banner display-flex">
         <div class="banner-text">
           <h1 class="club-title">
-            Get body in <br><span class="miama-font">shape</span> & stay healthy
+            Get body in <br /><span class="miama-font">shape</span> & stay
+            healthy
           </h1>
           <p class="club-description">
             A huge selection of health and fitness content, healthy recipes and
@@ -29,9 +33,8 @@
           </p>
           <div class="btn-secondary">
             <button class="btn-primary join-button">Join Club Now!</button>
-          <button class="download-button">Download App</button>
+            <button class="download-button">Download App</button>
           </div>
-          
         </div>
         <div class="banner-imag">
           <img src="./images/Images 2.png" alt="" />
@@ -42,14 +45,163 @@
           <div class="card-2 display-flex">
             <div class="circle"></div>
             <div>
-                <h1 class="card-2-title">350+</h1>
-            <p class="card-2-description">Video tutorial</p>
+              <h1 class="card-2-title">350+</h1>
+              <p class="card-2-description">Video tutorial</p>
             </div>
           </div>
         </div>
       </div>
     </header>
-    <main></main>
+    <main class="bg-style">
+      <section class="change-habit">
+        <h2 class="habit-title">Change Your Habits</h2>
+        <p class="habit-subtitle">
+          We believe fitness should be accessible to everyone, everywhere,
+          regardless of income or access to a gym.
+        </p>
+        <div class="habit">
+          <div class="habit-part-1">
+            <img src="./images/image 3.png" alt="exercise" />
+            <h4>Movement</h4>
+            <p>
+              Gym movements involve exercises that enhance strength,
+              flexibility, and cardiovascular health, such as weightlifting,
+              cardio, and stretching routines.
+            </p>
+          </div>
+          <div class="habit-part-2">
+            <img src="./images/image 2.png" alt="yuga" />
+            <h4>Time</h4>
+            <p>
+              Regular gym workouts improve time management skills and discipline
+              and efficiency in daily routines.
+            </p>
+          </div>
+          <div class="habit-part-3">
+            <img src="./images/image 4.png" alt="workout" />
+            <h4>Practice</h4>
+            <p>
+              Consistent and focused practice is essential for mastering any
+              skill and achieving long-term success.
+            </p>
+          </div>
+          <div class="habit-part-4">
+            <img src="./images/image 5.png" alt="gym-picture" />
+            <h4>Weight Loss</h4>
+            <p>
+              Effective weight loss involves a combination of healthy eating,
+              regular physical activity, and maintaining a balanced lifestyle.
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="run">
+        <div class="run-extra-mile">
+          <div class="run-text">
+            <h2>Run an Extra 
+              Mile Easily</h2>
+              <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. With hundreds of professional workouts.</p>
+              <button class="btn-primary join-button">Join Now</button>
+          </div>
+          <div class="run-imag">
+            <img src="./images/run.jpg" alt="run">
+          </div>
+        </div>
+      </section>
+      <section class="training">
+        <h1 class="training-title">Trainings and Exercises</h1>
+        <p class="font-style training-subtitle">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <div class="img-container">
+          <div class="row-1">
+            <div class="imag1">
+              <p>Lunge Stretch</p>
+            </div>
+            <div class="imag2">
+              <p> Push-Up</p>
+            </div>
+            <div class="imag3">
+              <p>Box Jump</p>
+            </div>
+          </div>
+          <div class="row-2">
+             <div class="imag4">
+            <p>Lunge Stretch</p>
+          </div>
+          <div class="imag5">
+            <p>Lunge</p>
+          </div>
+          <div class="imag6">
+            <p>Sit-Up</p>
+          </div>
+          </div>
+        </div>
+        </section>
+        <section class="calculate">
+          <div class="calculate-text">
+            <h1 class="calculate-title">BMI Calculator</h1>
+            <p class="calculate-subtitle font-style">Use the calculator and calculate your BMI:</p>
+          </div>
+          <div class="calculate-bmi display-flex">
+            <div class="chart-one">
+              <h3 class="chart-content margin-style">BMI Calculator Chart</h3>
+              <table>
+                 <thead>
+                  <tr>
+                    <th>BMI </th>
+                    <th>Weight Status</th>
+                  </tr>
+                 </thead>
+                 <tbody class="font-style">
+                  <tr>
+                    <td>Below 18.5</td>
+                    <td>Underweight</td>
+                  </tr>
+                  <tr>
+                    <td>18.5 - 24.9</td>
+                    <td>Healthy</td>
+                  </tr>
+                  <tr>
+                    <td>25.0 - 29.9</td>
+                    <td>Overweight</td>
+                  </tr>
+                 </tbody>
+                 <tfoot class="font-style">
+                  <tr>
+                    <td>30.0 - and Above</td>
+                    <td>Obese</td>
+                  </tr>
+                 </tfoot>
+              </table>
+            </div>
+            <div class="chart-two">
+              <h3 class="chart-content">Calculate your BMI</h3>
+              <p class="chart-description font-style">We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym. </p>
+              <div class="input-form ">
+                <div class="input-form-one">
+                  <input type="number" name="height" placeholder="Height/cm">
+                  <input type="number" name="weight" placeholder="Weight/kg">
+                  <input type="number" name="age" placeholder="Age">
+                  <select name="sex" >
+                    <option value="sex" disabled selected hidden>Sex</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option> 
+                  </select>
+                </div>
+                <div class="input-form-two">
+                  <select name="activity">
+                    <option value="" disabled selected hidden>Select an activity factor</option>
+                    <option value="low">Low</option>
+                    <option value="high">High</option>
+                </select>
+              </div>
+                <div>
+                  <button class="btn-primary calculate-button">Calculate</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+    </main>
     <footer></footer>
   </body>
 </html>
